[project]
name = "ai-modules"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Lunacea", email = "hi@lunacea.jp" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
